[project]
name = "learningLangGraph"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "gradio>=5.23.1",
    "html5lib>=1.1",
    "jupyterlab>=4.4.10",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "langchain-openai>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph[langchain]>=1.0.1",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
    "start>=0.2",
]
